rnsc/test_data/rns_integration/error/parser/class_header/access_flags/static.rns
.class static HelloWorld
.super java/lang/Object
.class_end
